--- a/app.json
+++ b/app.json
@@ -1,30 +1,18 @@
 {
   "expo": {
-    "name": "Blank Template (TypeScript)",
-    "slug": "smart-contact",
-    "privacy": "public",
-    "sdkVersion": "36.0.0",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
-    "version": "1.0.0",
+    "name": "Smart Contacts",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "version": "1.0.0",
+    "slug": "smart-contact",
+    "sdkVersion": "36.0.0",
     "ios": {
-      "supportsTablet": true
+      "bundleIdentifier": "com.hsyn.smartcontact",
+      "buildNumber": "1.0.0"
+    },
+    "android": {
+      "package": "com.hsyn.smartcontact",
+      "versionCode": 1
     }
   }
 }
